--- a/.github/workflows/android_devops.yml
+++ b/.github/workflows/android_devops.yml
@@ -1,10 +1,9 @@
 name: Android Build QA
 
 on:
-  push:
+  pull_request:
     branches:
-      - '*'
-      - '!master'
+      - 'develop'
 
 jobs:
   lint:
