se modificaron los triggers de los jobs

--- a/.github/workflows/android_check.yml
+++ b/.github/workflows/android_check.yml
@@ -1,11 +1,9 @@
 name: Android Check
 
 on:
-  push:
+  pull_request:
     branches:
-      - '*'
-      - '!master'
-      - '!develop'
+      - 'develop'
 
 jobs:
   check:
