Update android_devops (#1)
* Update android_devops

* Update android_devops.yml

--- a/.github/workflows/android_devops.yml
+++ b/.github/workflows/android_devops.yml
@@ -9,6 +9,9 @@ jobs:
   lint:
     name: Lint
     runs-on: ubuntu-latest
+    env:
+      REPO_USERID: ${{ secrets.REPO_USERID }}
+      REPO_TOKEN: ${{ secrets.REPO_TOKEN }}
     steps:
       - name: Checkout the code
         uses: actions/checkout@v2
@@ -32,6 +35,9 @@ jobs:
     name: Unit Test
     needs: [ lint ]
     runs-on: ubuntu-latest
+    env:
+      REPO_USERID: ${{ secrets.REPO_USERID }}
+      REPO_TOKEN: ${{ secrets.REPO_TOKEN }}
     steps:
       - name: Checkout the code
         uses: actions/checkout@v2
@@ -43,7 +49,7 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Run tests
-        run: ./gradlew module:testDebug
+        run: ./gradlew module:testDebugUnitTest
 
       - name: Upload test report
         uses: actions/upload-artifact@v2
@@ -55,6 +61,9 @@ jobs:
     name: Coverage Test
     needs: [ unit-test ]
     runs-on: ubuntu-latest
+    env:
+      REPO_USERID: ${{ secrets.REPO_USERID }}
+      REPO_TOKEN: ${{ secrets.REPO_TOKEN }}
     steps:
       - name: Checkout the code
         uses: actions/checkout@v2
@@ -81,6 +90,9 @@ jobs:
     name: Analysis Code
     needs: [ jacoco ]
     runs-on: ubuntu-latest
+    env:
+      REPO_USERID: ${{ secrets.REPO_USERID }}
+      REPO_TOKEN: ${{ secrets.REPO_TOKEN }}
     steps:
       - name: Checkout the code
         uses: actions/checkout@v2
@@ -96,15 +108,26 @@ jobs:
       - name: Make Gradle executable
         run: chmod +x ./gradlew
 
+      - name: Run lint
+        run: ./gradlew module:lintDebug
+
+      - name: Run tests
+        run: ./gradlew module:testDebugUnitTest
+
+      - name: Run Jacoco Test Report
+        run: ./gradlew module:jacocoTestReport
+
       - name: SonarCloud Scan
         run: ./gradlew module:sonarqube -Dsonar.host.url=https://sonarcloud.io/ -Dsonar.login=${{ secrets.SONARCLOUDTOKEN }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   artifact:
-    name: Generate Artifact
-    needs: [ sonarqube ]
+    name: Artifact
     runs-on: ubuntu-latest
+    env:
+      REPO_USERID: ${{ secrets.REPO_USERID }}
+      REPO_TOKEN: ${{ secrets.REPO_TOKEN }}
     steps:
       - name: Checkout the code
         uses: actions/checkout@v2
@@ -112,11 +135,13 @@ jobs:
       - name: Submodule
         uses: ./.github/workflows/submodule-action
 
+      - name: set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+
       - name: Make Gradle executable
         run: chmod +x ./gradlew
 
       - name: Upload Artifact
-        env:
-          REPO_USERID: ${{ secrets.REPO_USERID }}
-          REPO_TOKEN: ${{ secrets.REPO_TOKEN }}
-        run: ./gradlew module:publishDebugPublicationToGithubPackagesRepository
+        run: ./gradlew module:publishReleasePublicationToGithubPackagesRepository
