--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -3,14 +3,15 @@
     package="com.afoxplus.module.demo">
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
+        android:name=".DemoApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ThemeDemo">
         <activity
-            android:name=".MainActivity"
+            android:name=".delivery.views.activities.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
