--- a/module/upload.gradle
+++ b/module/upload.gradle
@@ -1,29 +1,28 @@
 apply plugin: 'maven-publish'
-apply { from("distribution.gradle.kts") }
 
-def repoUsername = findProperty("REPO_USERID") ?: System.getenv("REPO_USERID")
-def repoPassword = findProperty("REPO_TOKEN") ?: System.getenv("REPO_TOKEN")
-def versionApp = version
-
-task sourceJar(type: Jar) {
-    from android.sourceSets.main.java.srcDirs
-    classifier "sources"
+apply {
+    from("distribution.gradle.kts")
 }
+
+def repoUsername = findProperty("REPO_USERID_AFOX") ?: System.getenv("REPO_USERID")
+def repoPassword = findProperty("REPO_TOKEN_AFOX") ?: System.getenv("REPO_TOKEN")
+def versionApp = version
 
 afterEvaluate {
     publishing {
         publications {
-            aar(MavenPublication) {
+            module(MavenPublication) {
                 groupId = ConfigureApp.groupId
                 artifactId = ConfigureApp.artifactId
                 version = versionApp
-                artifact(bundleReleaseAar)
-                artifact(sourceJar)
+                artifacts {
+                    artifact("$buildDir/outputs/aar/module-release.aar")
+                }
             }
         }
         repositories {
             maven {
-                name = "GithubPackages"
+                name = "Artifact"
                 url = ConfigureApp.urlRepoDependencies
                 allowInsecureProtocol(true)
                 credentials {
