--- a/.github/workflows/android_validation.yml
+++ b/.github/workflows/android_validation.yml
@@ -1,64 +1,56 @@
-name: Android Check
+name: Android Validation
+run-name: Android Validation execute by @${{ github.actor }}
 
 on:
   pull_request:
     branches:
-      - 'develop'
       - 'RC**'
 
+env:
+  REPO_USERID: ${{ secrets.REPO_USERID }}
+  REPO_TOKEN: ${{ secrets.REPO_TOKEN }}
+
 jobs:
-  check:
-    name: Check
+  lint:
+    name: Lint
     runs-on: ubuntu-latest
-    env:
-      REPO_USERID: ${{ secrets.REPO_USERID }}
-      REPO_TOKEN: ${{ secrets.REPO_TOKEN }}
     steps:
-      - name: Checkout the code
-        uses: actions/checkout@v2
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-      - name: Submodule
-        uses: ./.github/workflows/actions
+      - name: Setup Project
+        uses: ./.github/actions/android
 
-      - name: set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
-
-      - name: Make Gradle executable
-        run: chmod +x ./gradlew
-
-      - name: Run lint
+      - name: Run Lint
         run: ./gradlew module:lintDebug
 
-      - name: Upload html test report
-        uses: actions/upload-artifact@v2
+      - name: Upload Lint Test Report
+        uses: actions/upload-artifact@v3
         with:
           name: lint_report
           path: module/build/reports/lint-results-debug.html
 
-      - name: Run tests
-        run: ./gradlew module:testDebugUnitTest
+  test:
+    name: Code Analysis
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-      - name: Upload test report
-        uses: actions/upload-artifact@v2
-        with:
-          name: unit_test_report
-          path: module/build/reports/tests/testDebugUnitTest/
-
-      - name: Run Jacoco Test Report
-        run: ./gradlew module:jacocoTestReport
-
-      - name: Upload coverage test report
-        uses: actions/upload-artifact@v2
-        with:
-          name: jacoco_test_report
-          path: module/build/reports/jacoco/jacocoTestReport/
+      - name: Setup Project
+        uses: ./.github/actions/android
 
       - name: Run Jacoco Test Coverage Verification
         run: ./gradlew module:jacocoTestCoverageVerification
 
-      - name: SonarCloud Scan
-        run: ./gradlew module:sonarqube -Dsonar.host.url=https://sonarcloud.io/ -Dsonar.login=${{ secrets.SONARCLOUDTOKEN }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload Test Report
+        uses: actions/upload-artifact@v3
+        with:
+          name: unit_test_report
+          path: module/build/reports/tests/testDebugUnitTest/
+
+      - name: Upload Coverage Test Report
+        uses: actions/upload-artifact@v3
+        with:
+          name: jacoco_test_report
+          path: module/build/reports/jacoco/jacocoTestReport/
