--- a/module/filter.gradle
+++ b/module/filter.gradle
@@ -38,6 +38,11 @@ ext.getMyFilter = { ->
             '*/_ViewBinding*.*',
             '*/_Factory.*',
             '*/\$$Parcelable*.*',
+            '**/*App.*',
+            '**/*Application.*',
+            '**/*Activity.*',
+            '**/*Fragment.*',
+            '**/*activities**',
             '**/databinding/**',
             '**/hilt_aggregated_deps/**',
             '**/DataBindingTriggerClass.class/**',
