--- a/module/jacoco.gradle
+++ b/module/jacoco.gradle
@@ -35,26 +35,24 @@ android {
 
     def debugTree = fileTree(dir: "${buildDir}/intermediates/javac/debug/classes", excludes: fileFilter)
     def kotlinTree = fileTree(dir: "${buildDir}/tmp/kotlin-classes/debug", excludes: fileFilter)
+
     def mainSrc = "${project.projectDir}/src/main/java"
     def kotlinSrc = "${project.projectDir}/src/main/kotlin"
 
     task jacocoTestReport(type: JacocoReport, dependsOn: ['testDebugUnitTest'], group: 'jacocoReport') {
-
         reports {
-            xml.enabled(true)
-            html.enabled(true)
+            xml.required = true
+            html.required = true
         }
-
-        getSourceDirectories().setFrom(files([mainSrc, kotlinSrc]))
-        getClassDirectories().setFrom(files([debugTree, kotlinTree]))
-        getExecutionData().setFrom(files("${buildDir}/jacoco/testDebugUnitTest.exec"))
+        sourceDirectories.from = files([mainSrc, kotlinSrc])
+        classDirectories.from = files([debugTree, kotlinTree])
+        executionData.from = files("${buildDir}/jacoco/testDebugUnitTest.exec")
     }
 
     task jacocoTestCoverageVerification(type: JacocoCoverageVerification, dependsOn: 'jacocoTestReport', group: 'jacocoReport') {
-
-        getSourceDirectories().setFrom(files([mainSrc, kotlinSrc]))
-        getClassDirectories().setFrom(files([debugTree, kotlinTree]))
-        getExecutionData().setFrom(files("${buildDir}/jacoco/testDebugUnitTest.exec"))
+        sourceDirectories.from = files([mainSrc, kotlinSrc])
+        classDirectories.from = files([debugTree, kotlinTree])
+        executionData.from = files("${buildDir}/jacoco/testDebugUnitTest.exec")
 
         violationRules {
             setFailOnViolation(true)
@@ -65,5 +63,10 @@ android {
                 }
             }
         }
+    }
+
+    task jacocoTestCoverageViewResult(type: Exec, dependsOn: 'jacocoTestReport', group: 'jacocoReport') {
+        executable "sh"
+        args "-c", "open '${buildDir}/reports/jacoco/jacocoTestReport/html/index.html'"
     }
 }
