Added demo config

--- a/demo/src/main/AndroidManifest.xml
+++ b/demo/src/main/AndroidManifest.xml
@@ -11,12 +11,19 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.module">
+        android:theme="@style/UIKit.Theme">
         <activity
             android:name=".ui.MainActivity"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/UIKit.NoActionBar.Light" />
+
+        <activity
+            android:name="com.afoxplus.demo_config.delivery.views.activities.DemoConfigStartActivity"
+            android:exported="true"
+            android:theme="@style/UIKit.NoActionBar.Light">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
